adds navigational bar

--- a/new_index.html
+++ b/new_index.html
@@ -11,6 +11,21 @@
     <title>Edward Abbey Quotes</title>
   </head>
   <body>
+    <ul class="nav justify-content-end">
+      <li class="nav-item">
+    <a class="nav-link active" href="#">Active</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled" href="#">Disabled</a>
+    </li>
+    </ul>
+    
     <div class="container">
     <h1>Edward Abbey Quotes</h1>
 
